--- a/README
+++ b/README
@@ -6,6 +6,8 @@ Jira/chd-xxxx - Branches starting with Jira cantained the required patches to co
 
 fix/ - This is the branch that contains all my fixes in one place.  If you are looking for all the features I have added into the system this is the branch you want.
 
+dev/XXX - Features not yet complete.  These are in various level of completion.
+
 X_X_X - Example 4_2_3 That would be version 4.2.3.  That would be the same as the master branch when WGM released 4.2.3
 
 X_X_X/fix/ - My fixes all in one place for the Version in question.
