--- a/README
+++ b/README
@@ -1,18 +1,33 @@
-Branch breakout
+Under Class CerberusApplication
+Function translateTeamCategoryCode
 
-Master - The master branch this should be close to or the Same as WGM current master.  
+I made the following changes.
 
-Jira/chd-xxxx - Branches starting with Jira cantained the required patches to complete the Jira issue with the same number.  URL: http://www.wgmdev.com/jira/browse/CHD-XXXX
+/**
+* Translates the string version of a group/bucket combo into their
+* respective IDs.
+*
+* @todo This needs a better name and home
+*/
+static function translateTeamCategoryCode($code) {
+$t_or_c = substr($code,0,1);
+$t_or_c_id = intval(substr($code,1));
 
-fix/ - This is the branch that contains all my fixes in one place.  If you are looking for all the features I have added into the system this is the branch you want.
+if($t_or_c=='c') {
+$categories = DAO_Bucket::getAll();
+$team_id = $categories[$t_or_c_id]->team_id;
+$category_id = $t_or_c_id;
+} else {
+$team_id = $t_or_c_id;
+if($t_or_c=='a') {
+$category_id = -1;
+} else {
+$category_id = 0;
+}
+}
 
-dev/XXX - Features not yet complete.  These are in various level of completion.
+return array($team_id, $category_id);
+}
 
-X_X_X - Example 4_2_3 That would be version 4.2.3.  That would be the same as the master branch when WGM released 4.2.3
+I did this so I could use this for reports were I need both inbox $category_id=0 and all I decided to use $category_id=-1 for.
 
-X_X_X/fix/ - My fixes all in one place for the Version in question.
-
-X_X_X/jira/ - Jira fixes for the Version in question.
-
-Thanks
-Robert
