--- a/README
+++ b/README
@@ -14,5 +14,7 @@ X_X_X/fix/ - My fixes all in one place for the Version in question.
 
 X_X_X/jira/ - Jira fixes for the Version in question.
 
+/helpdesk/xxx  Braches spefic to helpdesk.
+
 Thanks
 Robert
